// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component рендер заблокированной кнопки 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  disabled={true}
  onClick={[MockFunction]}
  type="button"
>
  <p
    className="text undefined"
  >
    Заблокировано
  </p>
</button>
`;

exports[`Button Component рендер кнопки без текста 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  onClick={[MockFunction]}
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;

exports[`Button Component рендер кнопки с индикацией загрузки 1`] = `
<button
  className="text text_type_button text_color_primary button undefined loader "
  disabled={true}
  onClick={[MockFunction]}
  type="button"
>
  <img
    alt="Загрузка."
    className="loader_icon"
    src="loader.svg"
  />
</button>
`;

exports[`Button Component рендер кнопки с текстом 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  onClick={[MockFunction]}
  type="button"
>
  <p
    className="text undefined"
  >
    Нажми меня
  </p>
</button>
`;
